[tool.poetry]
name = "alx_cli"
version = "0.1.0"
description = ""
authors = ["Alex Turner <none>"]
readme = "README.md"

[tool.poetry.scripts]
alx_cli = "alx_cli.main:app"


[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
